--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
 
 dependencies {
 	compile "com.fasterxml.jackson.core:jackson-databind:2.3.1"
+	compile "com.google.guava:guava:16.0.1"
 
 	testCompile "org.mockito:mockito-all:1.9.5"
 	testCompile "org.hamcrest:hamcrest-all:1.3"
